# simple-infer

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: docs.yml  test.yml
docs/: api.rst  conf.py  index.rst
simple_infer/: __init__.py  inference.py  models.py
tests/: test_inference.py  test_pydantic_models.py
