[project]
name = "simple-infer"
version = "0.1.0"
description = "Minimal, hackable batch inference library for LLMs"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "sumukshashidhar"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=1.97.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-rtd-theme>=3.0.2",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
